--- a/app/src/main/res/layout/main_tab_04.xml
+++ b/app/src/main/res/layout/main_tab_04.xml
@@ -115,6 +115,7 @@
                 android:background="#E3E1DA" />
 
             <LinearLayout
+                android:id="@+id/set"
                 android:layout_width="match_parent"
                 android:layout_height="60dp"
                 android:gravity="center_vertical">
