--- a/app/src/main/res/layout/main_tab_03.xml
+++ b/app/src/main/res/layout/main_tab_03.xml
@@ -20,6 +20,7 @@
 			android:layout_height="0dp"
 			android:layout_weight="1">
 			<RelativeLayout
+				android:id="@+id/gongyi"
 				android:padding="20dp"
 				android:layout_width="match_parent"
 				android:layout_weight="1"
