--- a/app/src/main/res/layout/picture_details_activity.xml
+++ b/app/src/main/res/layout/picture_details_activity.xml
@@ -33,37 +33,37 @@
 
     </RelativeLayout>
 
-    <RelativeLayout
-        android:id="@+id/details_content_layout"
-        android:layout_width="fill_parent"
-        android:layout_height="wrap_content"
-        android:layout_alignParentBottom="true"
-        android:background="@color/home_work_title_back"
-        android:orientation="vertical" >
+    <!--<RelativeLayout-->
+        <!--android:id="@+id/details_content_layout"-->
+        <!--android:layout_width="fill_parent"-->
+        <!--android:layout_height="wrap_content"-->
+        <!--android:layout_alignParentBottom="true"-->
+        <!--android:background="@color/home_work_title_back"-->
+        <!--android:orientation="vertical" >-->
 
-        <TextView
-            android:id="@+id/details_content"
-            android:layout_width="fill_parent"
-            android:layout_height="wrap_content"
-            android:lineSpacingMultiplier="1.3"
-            android:maxLines="3"
-            android:minLines="3"
-            android:padding="15dp"
-            android:scrollbars="vertical"
-            android:textColor="@android:color/white"
-            android:textSize="14dp" />
+        <!--<TextView-->
+            <!--android:id="@+id/details_content"-->
+            <!--android:layout_width="fill_parent"-->
+            <!--android:layout_height="wrap_content"-->
+            <!--android:lineSpacingMultiplier="1.3"-->
+            <!--android:maxLines="3"-->
+            <!--android:minLines="3"-->
+            <!--android:padding="15dp"-->
+            <!--android:scrollbars="vertical"-->
+            <!--android:textColor="@android:color/white"-->
+            <!--android:textSize="14dp" />-->
 
-        <TextView
-            android:id="@+id/details_parent_name"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_alignParentRight="true"
-            android:layout_below="@id/details_content"
-            android:layout_centerVertical="true"
-            android:paddingBottom="10dp"
-            android:paddingRight="15dp"
-            android:textColor="@android:color/white"
-            android:textSize="16sp" />
-    </RelativeLayout>
+        <!--<TextView-->
+            <!--android:id="@+id/details_parent_name"-->
+            <!--android:layout_width="wrap_content"-->
+            <!--android:layout_height="wrap_content"-->
+            <!--android:layout_alignParentRight="true"-->
+            <!--android:layout_below="@id/details_content"-->
+            <!--android:layout_centerVertical="true"-->
+            <!--android:paddingBottom="10dp"-->
+            <!--android:paddingRight="15dp"-->
+            <!--android:textColor="@android:color/white"-->
+            <!--android:textSize="16sp" />-->
+    <!--</RelativeLayout>-->
 
 </RelativeLayout>
