--- a/app/src/main/res/layout/login.xml
+++ b/app/src/main/res/layout/login.xml
@@ -46,6 +46,7 @@
             android:layout_gravity="center_horizontal"
             android:layout_marginTop="30dp"
             android:hint="密码"
+            android:password="true"
             android:textColorHint="@android:color/white"
             android:theme="@style/MyEditText" />
 
