--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -21,4 +21,6 @@
 
     <color name="black70">#b2000000</color>
     <color name="home_work_title_back">#A0000000</color>
+
+    <color name="list_bg_border">#ffACA8A8</color>
 </resources>
