--- a/app/src/main/res/layout/three_dmg_daoyou.xml
+++ b/app/src/main/res/layout/three_dmg_daoyou.xml
@@ -44,6 +44,35 @@
             android:layout_marginTop="8dp"
             android:src="@drawable/three_dmg_daoyou" />
 
+        <LinearLayout
+            android:orientation="horizontal"
+            android:layout_marginBottom="28dp"
+            android:layout_marginLeft="28dp"
+            android:layout_marginRight="28dp"
+            android:layout_marginTop="8dp"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content">
+
+            <Button
+                android:id="@+id/playButton"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="播放" />
+
+            <SeekBar
+                android:id="@+id/seekbar_def"
+                android:layout_width="320px"
+                android:layout_height="wrap_content"
+                android:max="100"
+                android:progress="10" />
+
+            <Button
+                android:id="@+id/stopButton"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="停止" />
+        </LinearLayout>
+
         <TextView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
