--- a/app/src/main/res/layout/sec_ke.xml
+++ b/app/src/main/res/layout/sec_ke.xml
@@ -31,6 +31,8 @@
         android:background="@drawable/tt_ke" />
 
     <ListView
+        android:layout_marginLeft="28dp"
+        android:layout_marginRight="28dp"
         android:layout_marginTop="8dp"
         android:id="@+id/list"
         android:layout_width="match_parent"
