--- a/app/src/main/res/layout/sec_yi.xml
+++ b/app/src/main/res/layout/sec_yi.xml
@@ -1,277 +1,43 @@
 <?xml version="1.0" encoding="utf-8"?>
-<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/colorPrimary">
+    android:orientation="vertical"
+    android:background="@drawable/sec_yi_bg">
 
-    <LinearLayout
+    <RelativeLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:orientation="vertical">
-
-        <RelativeLayout
-            android:layout_width="match_parent"
-            android:layout_height="60dp"
-            android:background="@android:color/transparent"
-            android:gravity="center_vertical">
-
-            <ImageView
-                android:id="@+id/sec_back"
-                android:layout_width="60dp"
-                android:layout_height="wrap_content"
-                android:layout_centerVertical="true"
-                android:background="@drawable/sec_back" />
-
-            <TextView
-                android:id="@+id/title_text"
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:gravity="center"
-                android:text="唐代服饰"
-                android:textColor="#fff"
-                android:textSize="20sp" />
-        </RelativeLayout>
-
-        <TextView
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginLeft="28dp"
-            android:layout_marginRight="28dp"
-            android:layout_marginTop="8dp"
-            android:text='      唐朝服饰主要指唐代汉服、胡服。唐代，是我国封建社会的鼎盛时期，无论是人们的思想，还是物质的生产都达到了历史的高峰。唐代开始，工艺装饰普遍使用花卉图案，其构图活泼自由、疏密匀称、丰满圆润。特别是波状的连续纹样与花草相结合后，就是唐代盛行的缠枝图案。 唐代服饰图案，改变了以往那种以天赋神授的创作思想，用真实的花、草、鱼、虫进行写生，但传统的龙、凤图案并没有被排斥，这也是由皇权神授的影响而决定的。这时服饰图案的设计趋向于表现自由、丰满、肥壮的艺术风格。
-' />
-        <TextView
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginLeft="28dp"
-            android:layout_marginRight="28dp"
-            android:layout_marginTop="8dp"
-            android:textSize="18sp"
-            android:text='宫廷服饰：' />
-
-        <TextView
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginLeft="28dp"
-            android:layout_marginRight="28dp"
-            android:layout_marginTop="8dp"
-            android:text='      冠服制度是封建社会权力等级的象征，作为封建社会统治阶级精神支柱的儒学，则把恪守祖先成法作为忠孝之本，强调衣冠制度必须遵循古法，特别是作为大礼服的祭服和朝服，不能背弃先王遗制，故称法服；它具有很大的保守性和封闭性。宫廷日常服装称为常服，常服具有时代的特征。
-' />
+        android:layout_height="60dp"
+        android:background="@android:color/transparent"
+        android:gravity="center_vertical">
 
         <ImageView
-            android:layout_width="wrap_content"
+            android:id="@+id/sec_back"
+            android:layout_width="60dp"
             android:layout_height="wrap_content"
-            android:layout_gravity="center"
-            android:layout_marginBottom="10dp"
-            android:layout_marginLeft="50dp"
-            android:layout_marginRight="50dp"
-            android:layout_marginTop="8dp"
-            android:src="@drawable/three_yi_one" />
-
-        <TextView
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginLeft="28dp"
-            android:layout_marginRight="28dp"
-            android:layout_marginTop="8dp"
-            android:textSize="18sp"
-            android:text='天子服饰：' />
-
-        <TextView
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginLeft="28dp"
-            android:layout_marginRight="28dp"
-            android:layout_marginTop="8dp"
-            android:text='      唐朝天子服装 ，根据穿着场合的不同，可以分为礼服和常服。
-\r\n        大裘冕，是天子服饰中规格最高、最为庄重的一款衣服，只在天子祭拜天神、地神的时候穿。“大裘冕”，顾名思义，就是身穿“大裘”，头戴“冕”。' />
-
-        <ImageView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_gravity="center"
-            android:layout_marginBottom="10dp"
-            android:layout_marginLeft="50dp"
-            android:layout_marginRight="50dp"
-            android:layout_marginTop="8dp"
-            android:src="@drawable/three_yi_two" />
-        <ImageView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_gravity="center"
-            android:layout_marginBottom="10dp"
-            android:layout_marginLeft="50dp"
-            android:layout_marginRight="50dp"
-            android:layout_marginTop="8dp"
-            android:src="@drawable/three_yi_three" />
-        <TextView
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginLeft="28dp"
-            android:layout_marginRight="28dp"
-            android:layout_marginTop="8dp"
-            android:textSize="18sp"
-            android:text='军人服饰：' />
-
-        <TextView
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginLeft="28dp"
-            android:layout_marginRight="28dp"
-            android:layout_marginTop="8dp"
-            android:text='      唐代武官的服制花色，规定武三品以上、左右武威卫饰对虎，左右豹韬卫饰豹，左右鹰扬卫饰鹰，左右玉钤卫饰对鹘，左右金吾卫饰对豸。又诸王饰盘龙及鹿，宰相饰凤池，尚书饰对雁。后又规定千牛卫饰瑞牛，左右卫饰瑞马，骁卫饰虎，武卫饰鹰，威卫饰豹，领军卫饰白泽，金吾卫饰辟邪，监门卫饰j狮子。唐太和六年又许三品以上服鹘衔瑞草、雁衔绶带及对孔雀绫袄。这类纹饰均以刺绣，按唐代服装款式，一般应绣于胸背或肩袖部位。
-' />
-
-        <ImageView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_gravity="center"
-            android:layout_marginBottom="10dp"
-            android:layout_marginLeft="50dp"
-            android:layout_marginRight="50dp"
-            android:layout_marginTop="8dp"
-            android:src="@drawable/three_yi_four" />
-
-        <TextView
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginLeft="28dp"
-            android:layout_marginRight="28dp"
-            android:layout_marginTop="8dp"
-            android:textSize="18sp"
-            android:text='妇女服饰：' />
-
-        <TextView
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginLeft="28dp"
-            android:layout_marginRight="28dp"
-            android:layout_marginTop="8dp"
-            android:text='      唐代女性服饰中有一种在贵妇间流行一种衫裙。它将裙带高高系在腰线以上，比如胸下，甚至系在胸线上方，历史上并没有文字记载名字叫做齐胸襦裙。这种款式无论身材丰腴还是瘦削都能达到别样的飘逸效果，尤其是在以丰腴为流行的圈子中更受欢迎。
-' />
-
-        <ImageView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_gravity="center"
-            android:layout_marginBottom="10dp"
-            android:layout_marginLeft="50dp"
-            android:layout_marginRight="50dp"
-            android:layout_marginTop="8dp"
-            android:src="@drawable/three_yi_five" />
-
-        <TextView
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginLeft="28dp"
-            android:layout_marginRight="28dp"
-            android:layout_marginTop="8dp"
-            android:textSize="18sp"
-            android:text='命妇礼服：' />
-
-        <TextView
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginLeft="28dp"
-            android:layout_marginRight="28dp"
-            android:layout_marginTop="8dp"
-            android:text='      皇后的三种服装有袆衣、鞠衣、钿钗襢衣；皇太子妃的三种服装有褕翟、鞠衣、钿钗礼衣。
-' />
-
-        <ImageView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_gravity="center"
-            android:layout_marginBottom="10dp"
-            android:layout_marginLeft="50dp"
-            android:layout_marginRight="50dp"
-            android:layout_marginTop="8dp"
-            android:src="@drawable/three_yi_six" />
-        <TextView
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginLeft="28dp"
-            android:layout_marginRight="28dp"
-            android:layout_marginTop="8dp"
-            android:textSize="18sp"
-            android:text='公卿礼服：' />
-
-        <TextView
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginLeft="28dp"
-            android:layout_marginRight="28dp"
-            android:layout_marginTop="8dp"
-            android:text='      唐代官吏服装大致可分两类，一类为祭祀与重大政事活动的服装（祭服或朝服）；一类为比较普通的工作与社交活动的服装（公服或常服）。
-' />
-
-        <ImageView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_gravity="center"
-            android:layout_marginBottom="10dp"
-            android:layout_marginLeft="50dp"
-            android:layout_marginRight="50dp"
-            android:layout_marginTop="8dp"
-            android:src="@drawable/three_yi_seven" />
-
-        <TextView
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginLeft="28dp"
-            android:layout_marginRight="28dp"
-            android:layout_marginTop="8dp"
-            android:textSize="18sp"
-            android:text='慢束罗裙半露胸：' />
-
-        <TextView
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginLeft="28dp"
-            android:layout_marginRight="28dp"
-            android:layout_marginTop="8dp"
-            android:text='      慢束罗裙半露胸，并不是什么人都能做的。在唐代，只有有身份的人才能穿开胸衫，永泰公主可以半裸胸，歌女可以半裸胸以取悦于统治阶级，而平民百姓家的女子是不许半裸胸的。当时，唐朝半露胸的裙装有点类似于现代西方的夜礼服，只是不准露出肩膀和后背。
-' />
-
-        <ImageView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_gravity="center"
-            android:layout_marginBottom="10dp"
-            android:layout_marginLeft="50dp"
-            android:layout_marginRight="50dp"
-            android:layout_marginTop="8dp"
-            android:src="@drawable/three_yi_eight" />
-
-        <TextView
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginLeft="28dp"
-            android:layout_marginRight="28dp"
-            android:layout_marginTop="8dp"
-            android:textSize="18sp"
-            android:text='襦裙半壁穿戴：' />
-
-        <TextView
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginLeft="28dp"
-            android:layout_marginRight="28dp"
-            android:layout_marginTop="8dp"
-            android:text='      襦裙半臂穿戴--半臂这种服饰早在初唐即已出现;不仅在中原地区流行，西北地区的妇女也同样喜欢襦裙半臂穿戴，半臂是从短襦延边出来的一种服饰，一般都用对襟，穿在胸前结带。也有少数用"套衫"式的，穿时从上套下，领口宽大，呈坦胸状。半臂的下摆可以显现在外，也可以像短襦那样束在裙腰的里面。从传世的壁画，陶佣来看，穿著这种服装，里面一定要衬内衣(如短襦)，而不能单独使用。
-' />
-
-        <ImageView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_gravity="center"
-            android:layout_marginBottom="10dp"
-            android:layout_marginLeft="50dp"
-            android:layout_marginRight="50dp"
-            android:layout_marginTop="8dp"
-            android:src="@drawable/three_yi_nine" />
+            android:layout_centerVertical="true"
+            android:background="@drawable/sec_back" />
 
 
-    </LinearLayout>
+    </RelativeLayout>
 
-</ScrollView>
+
+    <ImageView
+        android:scaleType="fitCenter"
+        android:layout_width="104dp"
+        android:layout_height="30dp"
+        android:layout_centerVertical="true"
+        android:layout_marginLeft="60dp"
+        android:background="@drawable/tt_yi" />
+
+    <ListView
+        android:layout_marginLeft="28dp"
+        android:layout_marginRight="28dp"
+        android:layout_marginTop="8dp"
+        android:id="@+id/list"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content">
+
+    </ListView>
+
+</LinearLayout>
