--- a/app/src/main/res/layout/three_dmg_daoyou.xml
+++ b/app/src/main/res/layout/three_dmg_daoyou.xml
@@ -45,6 +45,7 @@
             android:src="@drawable/three_dmg_daoyou" />
 
         <LinearLayout
+            android:gravity="center_vertical"
             android:orientation="horizontal"
             android:layout_marginBottom="28dp"
             android:layout_marginLeft="28dp"
@@ -60,7 +61,8 @@
                 android:text="播放" />
 
             <SeekBar
-                android:id="@+id/seekbar_def"
+                android:background="@android:color/white"
+                android:id="@+id/seekbar"
                 android:layout_width="320px"
                 android:layout_height="wrap_content"
                 android:max="100"
