--- a/app/src/main/res/layout/three_dt_daoyou.xml
+++ b/app/src/main/res/layout/three_dt_daoyou.xml
@@ -46,6 +46,37 @@
             android:src="@drawable/three_dt_daoyou" />
 
 
+        <LinearLayout
+            android:gravity="center_vertical"
+            android:orientation="horizontal"
+            android:layout_marginBottom="28dp"
+            android:layout_marginLeft="28dp"
+            android:layout_marginRight="28dp"
+            android:layout_marginTop="8dp"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content">
+
+            <Button
+                android:id="@+id/playButton"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="播放" />
+
+            <SeekBar
+                android:background="@android:color/white"
+                android:id="@+id/seekbar"
+                android:layout_width="320px"
+                android:layout_height="wrap_content"
+                android:max="100"
+                android:progress="10" />
+
+            <Button
+                android:id="@+id/stopButton"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="停止" />
+        </LinearLayout>
+
         <FrameLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content">
@@ -77,9 +108,8 @@
                 android:id="@+id/btnPause"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="暂停" />
+                android:text="停止" />
         </LinearLayout>
-
 
         <TextView
             android:layout_width="match_parent"
