--- a/app/src/main/res/layout/three_zs_dt.xml
+++ b/app/src/main/res/layout/three_zs_dt.xml
@@ -60,13 +60,13 @@
             android:layout_marginRight="28dp"
             android:layout_marginTop="8dp"
             android:text='知识问答：\r\n
-\r\n1、大唐芙蓉园在哪一个朝代被称为“宜春苑”？ (A)
+\r\n1、大唐芙蓉园在哪一个朝代被称为“宜春苑”？
 \r\nA、秦朝  B、汉朝  C、宋朝  D、明朝
-\r\n\r\n2、“芙蓉园”是哪位皇帝命名的？(B)
+\r\n\r\n2、“芙蓉园”是哪位皇帝命名的？
  \r\nA、秦始皇  B、隋文帝   C、隋炀帝  D、唐太宗
-\r\n\r\n3、现在的大唐芙蓉园是哪一年正式对外开放的？(C)
+\r\n\r\n3、现在的大唐芙蓉园是哪一年正式对外开放的？
  \r\nA、1999年  B、2002年  C、2005年  D、2008年
-\r\n\r\n4、“曲江流饮”是指哪些人再次饮酒？(C)
+\r\n\r\n4、“曲江流饮”是指哪些人再次饮酒？
  \r\nA、官吏  B、僧人  C、进士  D、皇族
 ' />
 
