--- a/app/src/main/res/layout/three_dyt_daoyou.xml
+++ b/app/src/main/res/layout/three_dyt_daoyou.xml
@@ -81,6 +81,8 @@
             <com.xian.www.tangdaizi.widget.CustomVideoView
                 android:id="@+id/videoview"
                 android:layout_width="match_parent"
+                android:layout_marginLeft="200dp"
+                android:layout_marginRight="200dp"
                 android:layout_height="250dp" />
             <ImageView
                 android:id="@+id/image"
